<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="10dp"
    tools:context=".Fragments.Account">

    <TextView
        style="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/update_account_1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/update_your_account_settings_below"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/UpdateEmailTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/enter_your_email"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/we_ll_never_share_your_email_with_anyone_else_it_will_only_be_used_for_sending_you_login_link_if_you_ever_forget_your_password" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/UpdateUsernameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"
        android:hint="@string/enter_new_username"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password1"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/UpdatePasswordtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/enter_new_password"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_confirmation"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/UpdateConfirmNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/confirm_new_password"/>

    <Button
        android:id="@+id/UpdateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/gray"
        android:drawableStart="@drawable/ic_baseline_save_24"
        android:text="@string/update_account"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/DeleteAccount"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:drawableStart="@drawable/ic_baseline_delete_24"
        android:text="@string/delete_account_and_all_notes_forever"
        android:textColor="@color/white" />

</LinearLayout>
</ScrollView>
</layout>
