<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:layout_marginLeft="8dp"
        android:focusableInTouchMode="true"
        tools:context=".LoginIn">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView80"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Login below to see your all notes."
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="109dp"
            android:layout_height="31dp"
            android:layout_marginTop="68dp"
            android:text="@string/username1"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.009"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="403dp"
            android:layout_height="47dp"
            android:hint="@string/usernameeditxt"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordtxt"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:hint="@string/passwordedittxt"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/LoginButtonBtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/gray"
            android:text="@string/logintxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/LoginWithFacebookButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/blue"
            android:text="Login With Facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.107"
            app:layout_constraintStart_toEndOf="@+id/LoginButtonBtn"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/ForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/forgot_password"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginButtonBtn"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="341dp"
            android:layout_height="44dp"
            android:layout_marginTop="28dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ForgotPassword"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/RegisterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/gray"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
